# qelos

./: .cursorrules  .dockerignore  .editorconfig  .env  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  Dockerfile.test  LICENSE  NOTICE  README.md  ROADMAP.md  check-unused-imports.js  docker-build.gitlab-ci.yml  lerna.json  netlify.toml  pack-apps.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remove-unused-imports.js  run.sh  skills-lock.json
.claude/skills/: product-handover
.github/: GITHUB_ACTIONS_SETUP.md  VALUES_YAML_GUIDE.md
.gitlab/: docker-release.yml
.windsurf/: mcp.json
PRODUCT_HANDOVER/: PRODUCT.md
PRODUCT_HANDOVER_BRANCH/: DIFF_REPORT.md
apps/ai/: README.md  (+6 more)
compose/: .env.example  docker-compose.persistent.yml  docker-compose.yml  package.json
documentation/: package-lock.json  package.json
e2e/: README.md  login.e2e.test.ts  package.json  pnpm-lock.yaml
helm/: Chart.yaml
integrators/: README.md
integrators/fastapi/: README.md  pyproject.toml
integrators/fastapi/qelos_integrator_fastapi/: __init__.py  config.py  context.py  cookies.py  dependencies.py  middleware.py  models.py  proxy.py  proxy_target.py  sdk_factory.py
integrators/fastapi/tests/: test_cookies.py  test_middleware.py  test_proxy_target.py
my-blueprints/: ai_editor_configuration.blueprint.json  business_information.blueprint.json  editedVideo.blueprint.json  personal_strategic.blueprint.json  strategic_video.blueprint.json  testblue.blueprint.json  video.blueprint.json  videoeditor.blueprint.json
scripts/: publish-packages.mjs  publish.mjs
(+1484 files in other folders)
